<?xml version="1.0" encoding="utf-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.aionemu</groupId>
	<artifactId>game-server</artifactId>
	<version>4.8-SNAPSHOT</version>
	<name>Aion Game Server</name>
	<packaging>jar</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.test.skip>true</maven.test.skip>
	</properties>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<testSourceDirectory>test</testSourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<release>21</release>
					<compilerArgs>
						<arg>-Xlint:all,-preview</arg>
					</compilerArgs>
					<showWarnings>true</showWarnings>
					<debug>true</debug>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<descriptors>
						<descriptor>assembly.xml</descriptor>
					</descriptors>
					<finalName>${project.artifactId}</finalName>
					<appendAssemblyId>false</appendAssemblyId>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>io.github.git-commit-id</groupId>
				<artifactId>git-commit-id-maven-plugin</artifactId>
				<version>7.0.0</version>
				<configuration>
					<includeOnlyProperties>
						<includeOnlyProperty>^git.branch$</includeOnlyProperty>
						<includeOnlyProperty>^git.commit.id.abbrev$</includeOnlyProperty>
						<includeOnlyProperty>^git.dirty$</includeOnlyProperty>
					</includeOnlyProperties>
					<replacementProperties>
						<replacementProperty>
							<property>git.dirty</property>
							<token>true</token>
							<value>-DIRTY</value>
						</replacementProperty>
						<replacementProperty>
							<property>git.dirty</property>
							<token>false</token>
							<value />
						</replacementProperty>
					</replacementProperties>
					<failOnNoGitDirectory>false</failOnNoGitDirectory>
				</configuration>
				<executions>
					<execution>
						<phase>initialize</phase>
						<goals>
							<goal>revision</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<archive>
						<manifestEntries>
							<POMVersion>${project.version}</POMVersion>
							<Revision>${git.commit.id.abbrev}${git.dirty}</Revision>
							<Branch>${git.branch}</Branch>
							<Date>${maven.build.timestamp}</Date>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.2</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<exportAntProperties>true</exportAntProperties>
				</configuration>
				<executions>
					<execution>
						<id>assembly-variables</id>
						<phase>prepare-package</phase>
						<configuration>
							<target>
								<!-- convert jar full path to filename, for server start scripts -->
								<basename property="javaagentlib" file="${com.aionemu:commons:jar}" />
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<!-- upload build if ftp url was specified as a maven command line argument (-Dftp.url=username:password@host:directory) -->
			<id>upload-build</id>
			<activation>
				<property>
					<name>ftp.url</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-antrun-plugin</artifactId>
						<version>3.1.0</version>
						<executions>
							<execution>
								<phase>package</phase>
								<configuration>
									<target>
										<scp remoteToDir="${ftp.url}" sftp="true" port="22" trust="true" verbose="true">
											<fileset dir="${project.build.directory}">
												<include name="*.zip" />
											</fileset>
										</scp>
									</target>
								</configuration>
								<goals>
									<goal>run</goal>
								</goals>
							</execution>
						</executions>
						<dependencies>
							<dependency>
								<groupId>org.apache.ant</groupId>
								<artifactId>ant-jsch</artifactId>
								<version>1.10.7</version>
							</dependency>
						</dependencies>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<dependencies>
		<dependency>
			<groupId>com.aionemu</groupId>
			<artifactId>commons</artifactId>
			<version>2.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.1</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>2.3.6</version>
		</dependency>
		<dependency>
			<groupId>com.github.spotbugs</groupId>
			<artifactId>spotbugs-annotations</artifactId>
			<version>4.6.0</version>
			<scope>provided</scope> <!-- don't include on build, since it's only needed for IDE validation -->
		</dependency>
	</dependencies>
</project>